[package]
name = "rerec"
description = "Readings and records from sensory instruments as used by Herodot and Percepter"
repository = "https://github.com/ladekjaer/rerec"
version = "0.0.2"
edition = "2024"
license = "0BSD"
keywords = ["IoT", "Raspberry_Pi", "DS18B20", "BME280", "weather"]

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", optional = true }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
